WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170598
MediaSample should store video sample rotation instead of orientation
https://bugs.webkit.org/show_bug.cgi?id=170598
Summary
MediaSample should store video sample rotation instead of orientation
Eric Carlson
Reported
2017-04-07 05:33:15 PDT
Store the rotation required to correct the sample for view instead of the sensor orientation.
Attachments
Proposed patch.
(16.00 KB, patch)
2017-04-07 08:34 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2017-04-07 08:34:07 PDT
Created
attachment 306504
[details]
Proposed patch.
Radar WebKit Bug Importer
Comment 2
2017-04-07 09:00:45 PDT
<
rdar://problem/31501643
>
WebKit Commit Bot
Comment 3
2017-04-07 10:29:44 PDT
Comment on
attachment 306504
[details]
Proposed patch. Clearing flags on attachment: 306504 Committed
r215099
: <
http://trac.webkit.org/changeset/215099
>
WebKit Commit Bot
Comment 4
2017-04-07 10:29:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug